--- a/.github/workflows/build-ubuntu.yml
+++ b/.github/workflows/build-ubuntu.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Upload build code coverage
         uses: codecov/codecov-action@v1
-        if: ${{ github.event_name == 'pull_request' || (github.event_name == 'push' && github.ref == 'refs/heads/master') }}
+        if: ${{ github.event_name == 'pull_request' || (github.event_name == 'push' && github.ref == 'refs/heads/main') }}
         env:
           JAVA_VERSION: ${{ matrix.java_version }}
         with:
