--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -72,3 +72,10 @@ updates:
     open-pull-requests-limit: 10
     labels:
       - "dependencies"
+  - package-ecosystem: github-actions
+    directory: "/"
+    schedule:
+      interval: weekly
+    open-pull-requests-limit: 10
+    labels:
+      - "dependencies"
