allow to select both apis in bug template

--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -17,6 +17,7 @@ body:
     id: api
     attributes:
       label: API
+      multiple: true
       options:
         - fluent-en_GB
         - infix-en_GB
