also allow to select multiple platforms

--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -27,8 +27,8 @@ body:
     id: platform
     attributes:
       label: Platform
+      multiple: true
       options:
-        - all
         - jvm
         - js
     validations:
