try to help receiving dexer

--- a/gradle/scripts/check-dexer.gradle
+++ b/gradle/scripts/check-dexer.gradle
@@ -18,6 +18,7 @@ configure(dexerProjects) { subproject ->
     }
     repositories {
         google()
+        mavenCentral()
     }
     dependencies {
         r8 "com.android.tools:r8:$d8_version"
