move out featureExtractors and subjectChangers in own api files
moreover:
- resolve TODO regarding `to + infinitive` schema in api-fluent-jvm
- improve all samples in api-fluent regarding
  fail-fast vs. non-fail-fast and formatting

--- a/apis/fluent-en_GB/atrium-api-fluent-en_GB-jvm/build.gradle
+++ b/apis/fluent-en_GB/atrium-api-fluent-en_GB-jvm/build.gradle
@@ -8,6 +8,7 @@ ext.jacoco_additional = [
 
 dependencies {
     api prefixedProject('logic-jvm')
+    implementation niok()
 
     testImplementation prefixedProject('specs-jvm')
 }
