--- a/.github/workflows/bc-ubuntu.yml
+++ b/.github/workflows/bc-ubuntu.yml
@@ -11,8 +11,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: "Set up JDK ${{ matrix.java_version }}"
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
+          distribution: 'adopt'
           java-version: ${{env.JAVA_VERSION}}
 
       - name: bcTests
