--- a/.github/workflows/generate-readme-examples.yml
+++ b/.github/workflows/generate-readme-examples.yml
@@ -10,8 +10,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: "Set up JDK 11"
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
+          distribution: 'adopt'
           java-version: 11
       - name: Generate readme
         run: ./gradlew :readme-examples:build
