--- a/.github/workflows/samples-windows.yml
+++ b/.github/workflows/samples-windows.yml
@@ -19,8 +19,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: "Set up JDK ${{ matrix.java_version }}"
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
+          distribution: 'adopt'
           java-version: ${{ matrix.java_version }}
 
       - name: Cache maven dependencies
