remove deprecated assertion verbs, CoreFactory and other TODO 0.18.0
other TODOs are:
- do the file renaming in api-infix ... -jvm and -kotlin_1_3 extension
- remove deprecated methods in AssertionBuilder
- remove SubjectProvider
- update TODO which will be done at a later stage
- remove addAssertion and addAssertionsCreatedBy on Expect and
  AssertionCreator
- remove maybeSubject from Expect
- activate toContainSize in MapLIkeToContainFormatSpecBase

moreover:
- we remove bcTests as old versions still rely on addAssertion and
  addAssertionsCreatedBy and we would have to forgive basically all
  tests anyway as we are going to change the report fundamentally
- move TODO regarding ProofContainer to 0.19.0

--- a/gradle/scripts/gh-pages.gradle
+++ b/gradle/scripts/gh-pages.gradle
@@ -66,9 +66,7 @@ dokka {
     }
 
     [
-        "ch.tutteli.atrium.api.verbs.internal",
-        //TODO remove with 0.18.0
-        "ch.tutteli.atrium.assertions.builders.impl",
+        "ch.tutteli.atrium.api.verbs.internal"
 
     ].each { pkg ->
         packageOptions {
