--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -23,30 +23,31 @@ jobs:
       - name: build
         run: ./gradlew build
 
-      - name: Cache android jar
-        id: android-cache
-        uses: actions/cache@v1
-        with:
-          path: android-jar-cache
-          key: ${{ runner.os }}-android-version-${{ env.android-version }}
-
-      - name: download Android SDK's android.jar (or use cached file)
-        if: steps.android-cache.outputs.cache-hit != 'true'
-        run: |
-          md android-jar-cache
-          cd android-jar-cache
-          curl -o android.jar -L "https://github.com/Sable/android-platforms/blob/main/android-${{ env.android-version }}/android.jar?raw=true"
-          $file_sha256 = $(certutil -hashfile android.jar sha256)[1] -replace " ",""
-          $expected_sha256 = "cdc1846376a14b0370cc63454a129606b4a52cc50ada75ef0d4cf956b1ad2daa"
-          if ($file_sha256 -Ne $expected_sha256) {
-              echo "wrong sha256 for android.jar: $file_sha256";
-              echo "                    expected: $expected_sha256";
-              exit -1
-          }
-
-      - name: check Atrium's -jvm.jar can be dexed
-        run: ATRIUM_ANDROID_JAR="$PWD/android-jar-cache/android.jar" ./gradlew checkDexer
-        shell: bash
+      # TODO 0.19.0 re-activate once we use the new MPP plugin, looks like the sha changed
+#      - name: Cache android jar
+#        id: android-cache
+#        uses: actions/cache@v1
+#        with:
+#          path: android-jar-cache
+#          key: ${{ runner.os }}-android-version-${{ env.android-version }}
+#
+#      - name: download Android SDK's android.jar (or use cached file)
+#        if: steps.android-cache.outputs.cache-hit != 'true'
+#        run: |
+#          md android-jar-cache
+#          cd android-jar-cache
+#          curl -o android.jar -L "https://github.com/Sable/android-platforms/blob/main/android-${{ env.android-version }}/android.jar?raw=true"
+#          $file_sha256 = $(certutil -hashfile android.jar sha256)[1] -replace " ",""
+#          $expected_sha256 = "cdc1846376a14b0370cc63454a129606b4a52cc50ada75ef0d4cf956b1ad2daa"
+#          if ($file_sha256 -Ne $expected_sha256) {
+#              echo "wrong sha256 for android.jar: $file_sha256";
+#              echo "                    expected: $expected_sha256";
+#              exit -1
+#          }
+#
+#      - name: check Atrium's -jvm.jar can be dexed
+#        run: ATRIUM_ANDROID_JAR="$PWD/android-jar-cache/android.jar" ./gradlew checkDexer
+#        shell: bash
 
       # TODO 0.19.0 re-activate scala API
       #            -   name: composite build atrium-scala2
@@ -64,7 +65,7 @@ jobs:
           env_vars: JAVA_VERSION
           # too many timeout errors, let's not fail at the moment
           #fail_ci_if_error: true
-          
+
       # TODO 0.19.0 re-activate once we use the new MPP-plugin, might be we no longer run into timeout issues (we still test it on ubuntu)
       # - name: composite build atrium-samples-test
       #  run: ./gradlew build
