--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ buildscript {
 
         // project setup
         tutteli_plugins_version = '0.33.1'
-        node_plugin_version = '2.2.0'
+        node_plugin_version = '3.2.1'
         d8_version = '1.6.84'
 
         // release
@@ -367,7 +367,7 @@ def createJsTestTask(String... subprojectNames) {
         def nodeModulesParentDir = file("$rootProject.projectDir/gradle/")
         node {
             download = true
-            npmVersion = '6.4.1'
+            npmVersion = '8.8.0'
             workDir = file("$rootProject.projectDir/.gradle/nodejs")
             npmWorkDir = file("$rootProject.projectDir/.gradle/npm")
             nodeModulesDir = nodeModulesParentDir
@@ -375,7 +375,7 @@ def createJsTestTask(String... subprojectNames) {
 
         task runMocha(type: NpxTask, dependsOn: [compileTestKotlin2Js, populateNodeModules]) {
             command = "mocha"
-            args = [compileTestKotlin2Js.outputFile]
+            args = [compileTestKotlin2Js.outputFile.toString()]
         }
         test.dependsOn runMocha
     }
