--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,7 @@ buildscript {
         gradle_nexus_publish_plugin_version = '1.1.0'
 
         //TODO 0.19.0 add all modules and remove this afterwards
-        newMultiplatformProjectNames = ["core"]
+        newMultiplatformProjectNames = ["core", "translations-en_GB", "translations-de_CH"]
 
         // gh-pages.gradle
         docProjects = (subprojects - toolProjectsFun).findAll {
@@ -76,9 +76,6 @@ buildscript {
                         // would have two classes with the same name if we add it as project as well,
                         // (clashes with "${rootProject.name}-translations-en_GB"
                         it.name != "${rootProject.name}-translations-de_CH" &&
-                        // TODO 0.19.0 remove once translations is also migrated to new MPP
-                        it.name != "${rootProject.name}-translations-de_CH-common" &&
-                        it.name != "${rootProject.name}-translations-de_CH-jvm" &&
                         // does not make sense to listen specs in coverage
                         !it.name.startsWith("${rootProject.name}-specs") &&
                         !it.name.contains("smoke-test")
@@ -152,7 +149,7 @@ configure(newMultiplatformProjects) { subproject ->
     apply plugin: "kotlin-multiplatform"
 
     //TODO 0.19.0 move sources to default path once all modules have been migrated
-    def oldParent = "../${subproject.name.substring("atrium-".length())}"
+    def oldParent = "../" + subproject.name.substring(name.lastIndexOf("-") + 1)
     def oldCommon = "$oldParent/${subproject.name}-common"
     def oldJvm = "$oldParent/${subproject.name}-jvm"
     def oldJs = "$oldParent/${subproject.name}-js"
@@ -176,7 +173,7 @@ configure(newMultiplatformProjects) { subproject ->
                 }
             }
         }
-        //TODO 0.20.0 activate as soon as all modules have been transitioned to new MPP
+        //TODO 0.19.0 activate as soon as all modules have been transitioned to new MPP
 //        js {
 //            nodejs()
 //        }
@@ -212,9 +209,6 @@ configure(newMultiplatformProjects) { subproject ->
                     runtimeOnly("org.spekframework.spek2:spek-runner-junit5:$spekVersion") {
                         exclude group: 'org.jetbrains.kotlin'
                     }
-
-                    implementation(kotlin("stdlib-jdk8"))
-                    runtimeOnly(kotlin("reflect"))  //spek requires reflect
                 }
             }
             jsTest {
@@ -256,14 +250,15 @@ configure(newMultiplatformProjects) { subproject ->
                 kotlin.srcDir("$oldJvm/src/test/kotlin")
                 resources.srcDir("$oldJvm/src/test/resources")
             }
-            jsMain {
-                kotlin.srcDir("$oldJs/src/main/kotlin")
-                resources.srcDir("$oldJs/src/main/resources")
-            }
-            jsTest {
-                kotlin.srcDir("$oldJs/src/test/kotlin")
-                resources.srcDir("$oldJs/src/test/resources")
-            }
+            //TODO 0.19.0 activate once all are migrated to MPP
+//            jsMain {
+//                kotlin.srcDir("$oldJs/src/main/kotlin")
+//                resources.srcDir("$oldJs/src/main/resources")
+//            }
+//            jsTest {
+//                kotlin.srcDir("$oldJs/src/test/kotlin")
+//                resources.srcDir("$oldJs/src/test/resources")
+//            }
         }
     }
 
@@ -336,7 +331,7 @@ configure(subprojects.findAll {
         }
     }
     compileTestKotlin {
-        kotlinOptions{
+        kotlinOptions {
             jvmTarget = "11"
         }
     }
@@ -436,7 +431,7 @@ configure(jacocoMulti.jacocoProjects + getAndroidProjects() - newMultiplatformPr
 
     // we don't want to have a dependency on dl.bintray anymore (the current version of ch.tutteli.spek (which is old)
     // still adds it for convenience reasons.
-    repositories.removeAll{
+    repositories.removeAll {
         it instanceof MavenArtifactRepository && (it as MavenArtifactRepository).url.toString().startsWith("https://dl.bintray.com")
     }
 
