--- a/build.gradle
+++ b/build.gradle
@@ -211,11 +211,12 @@ configure(newMultiplatformProjects) { subproject ->
                     }
                 }
             }
-            jsTest {
-                dependencies {
-                    implementation kotlin('test-js')
-                }
-            }
+            //TODO 0.19.0 activate once all are migrated to MPP
+//            jsTest {
+//                dependencies {
+//                    implementation kotlin('test-js')
+//                }
+//            }
 
             all {
                 languageSettings {
